--- a/examples/base/NetBaseWebMvc/Views/Home/Index.cshtml
+++ b/examples/base/NetBaseWebMvc/Views/Home/Index.cshtml
@@ -5,4 +5,40 @@
             <p>Net Base Web Mvc</p>
         </div>
     </div>
+    <div class="row">
+        <div class="col">
+            <button id="Test" type="button" class="btn btn-primary">Test</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <p id="Result" class="text-start"></p>
+        </div>
+    </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        var baseUrl = "@Url.Content("~/")";
+
+        $("#Test").click(function () {
+            console.log("Test");
+
+            $.ajax(
+            {
+                type: 'POST',
+                dataType: 'json',
+                url: baseUrl + 'Home/Test',
+                success: (response) => {
+                    console.log("Test Response");
+                    console.log(response);
+                    $("#Result").jsonViewer(response);
+                },
+                error: (xhr, status, error) => {
+                    console.error(error);
+                    $("#Result").html(xhr.status + " " + xhr.statusText);
+                }
+            });
+        });
+    });
+</script>
